Fixed various styling issues for pages on iphone

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -803,6 +803,12 @@ section[role="leader"].custom-fancybox-wrapper.executive-team ul li a:hover {
   color: #990101;
 }
 
+section[role="leader"].custom-fancybox-wrapper h4 {
+  margin-top: 10px;
+  line-height: 1.3em;
+  text-align: left;
+}
+
 .custom-fancybox-wrapper .tagline {
   font-family: robotolight;
   font-size: 14px;
@@ -1507,6 +1513,7 @@ section[role="blog"] .date {
 
 .post-separator{
 	margin: 3.42% auto;
+	margin-bottom: 30px;
 	background:#e6e8ea;
 	width:100%;
 	height:1px;
@@ -3203,6 +3210,7 @@ section[role="insight"].custom-fancybox-wrapper .tagline {
 section[role="insight"].custom-fancybox-wrapper h4 {
   margin-top: 10px;
   line-height: 1.3em;
+  text-align: left;
 }
 
 .insight-thumbnail {
@@ -3694,6 +3702,10 @@ span.insight-category-popout {
     font-size: 4.4em;
   }
   
+  .mdrs-body-section h4 {
+    font-size: 20px !important;
+  }
+  
 }
 
 @media only screen and (max-width:400px) {
@@ -3735,6 +3747,10 @@ span.insight-category-popout {
    
    section[role="explore"] .wrap {
      padding: 0px;
+   }
+   
+   .embed-box {
+     padding-top: 60px;
    }
 }
 
